--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.24.0",
+    "moment": "^2.29.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
